telefolders/web/css/style.css
/* ... */
body .app main.main .table-container .table thead tr th span {
  -webkit-writing-mode: sideways-lr;
  -ms-writing-mode: sideways-lr;
  writing-mode: sideways-lr;
}
body .app main.main .table-container .table tbody td:not(:first-child) {
  position: relative;
  z-index: 1;
}
body .app main.main .table-container .table thead tr th {
  min-height: 116px;
  max-height: 116px;
}
body .app main.main .table-container .table thead th:first-child::after,
body .app main.main .table-container .table tbody th:first-child::after {
  content: "";
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-right: 1px solid black;
  z-index: -1;
}
body .app main.main .table-container .table thead th::after {
  content: "";
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-bottom: 1px solid black;
  z-index: -1;
}
body .app main.main .table-container .table thead th {
  position: -webkit-sticky !important;
  position: sticky !important;
  top: 0;
  background-color: rgb(208, 208, 208);
}
body .app main.main .table-container .table tbody th:first-child,
body .app main.main .table-container .table thead th:first-child {
  min-width: 100px;
  max-width: 200px;
  left: 0;
  z-index: 11;
  border: none;
  background-color: rgb(208, 208, 208);
  overflow: hidden;
  text-overflow: ellipsis;
}
body .app main.main .table-container .table tbody th:first-child {
  z-index: 10;
}
body .app main.main .table-container .table tbody th {
  position: -webkit-sticky;
  position: sticky;
  left: 0;
  background: #fff;
  z-index: 100;
  border-right: 1px solid black;
}
@media (hover: hover) {
  body .app main.main .table-container .table tbody tr:hover td {
    background-color: #b0b0b0;
  }
  body .app main.main .table-container .table tbody tr:hover td:hover {
    background-color: #646464;
  }
  body .app main.main .table-container .table tbody tr:hover td:hover::after {
    content: "";
    width: 100%;
    height: 10000px;
    bottom: 50px;
    left: 0;
    background-color: rgba(100, 100, 100, 0.2);
    position: absolute;
    pointer-events: none;
  }
}
body .app main.main .table-container .table button {
  background-color: #fff;
  border: none;
}
body .hide {
  visibility: hidden;
  height: 0;
  width: 0;
}



/*# sourceMappingURL=style.css.map */

